crates/clx-hook/src/snapshots/clx_hook__tests__output_decision_allow_minimal.snap
---
source: crates/clx-hook/src/tests.rs
expression: value
---
{
  "hookSpecificOutput": {
    "hookEventName": "PreToolUse",
    "permissionDecision": "allow"
  }
}
