crates/clx-hook/src/snapshots/clx_hook__tests__output_decision_block_full.snap
---
source: crates/clx-hook/src/tests.rs
expression: value
---
{
  "hookSpecificOutput": {
    "additionalContext": "RULES: Check agent descriptions",
    "hookEventName": "PreToolUse",
    "permissionDecision": "block",
    "permissionDecisionReason": "Policy violation"
  }
}
