crates/clx-hook/src/snapshots/clx_hook__tests__output_generic_all_fields.snap
---
source: crates/clx-hook/src/tests.rs
expression: value
---
{
  "hookSpecificOutput": {
    "additionalContext": "[SPECIALIST RULES] Execute directly.",
    "hookEventName": "SubagentStart"
  },
  "systemMessage": "Global context here"
}
