crates/clx-hook/src/snapshots/clx_hook__tests__output_generic_session_start_system_msg.snap
---
source: crates/clx-hook/src/tests.rs
expression: value
---
{
  "hookSpecificOutput": {
    "hookEventName": "SessionStart"
  },
  "systemMessage": "Previous session: task was X"
}
