crates/clx-hook/src/snapshots/clx_hook__tests__output_generic_user_prompt_with_context.snap
---
source: crates/clx-hook/src/tests.rs
expression: value
---
{
  "hookSpecificOutput": {
    "additionalContext": "Orchestrator context injected",
    "hookEventName": "UserPromptSubmit"
  }
}
